--- a/QuizITT_WP/QuizITT_WP/MainPage.xaml
+++ b/QuizITT_WP/QuizITT_WP/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page x:Name="MainPage1"
     x:Class="QuizITT_WP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -47,16 +47,16 @@
                         <Button Name="btnPlayClassic" 
                                 Content="Classic Quiz" 
                                 FontSize="26" 
-                                HorizontalAlignment="Stretch"></Button>
+                                HorizontalAlignment="Stretch" Click="btnPlayClassic_Click"></Button>
                         <Button Name="btnPlayTime" 
                                 Content="Time Attack" 
                                 FontSize="26" 
-                                HorizontalAlignment="Stretch"></Button>
+                                HorizontalAlignment="Stretch" Click="btnPlayTime_Click"></Button>
                         <Button Name="btnPlayInsane" 
                                 Content="Insane Mode" 
                                 FontSize="26"                                 
                                 HorizontalAlignment="Stretch" 
-                                FontFamily="Global User Interface"></Button>
+                                FontFamily="Global User Interface" Click="btnPlayInsane_Click"></Button>
                     </StackPanel>
                 </Grid>
             </PivotItem>
@@ -97,7 +97,7 @@
 
                         <Button Name="btnImpostaUtente" Content="Imposta utente" Grid.Row="4" HorizontalAlignment="Stretch" Grid.ColumnSpan="3"></Button>
 
-                        <Button Name="btnReset" Content="Reset totale" Grid.Row="6" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Grid.ColumnSpan="3" Margin="10,0,9.667,26"></Button>
+                        <Button Name="btnReset" Content="Reset totale" Grid.Row="6" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Grid.ColumnSpan="3"></Button>
 
 
                     </Grid>
