--- a/QuizITT_WP/QuizITT_WP/QuizPage.xaml
+++ b/QuizITT_WP/QuizITT_WP/QuizPage.xaml
@@ -23,17 +23,17 @@
 
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
-            <TextBlock Text="Quiz Selezionato" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="Domanda x" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
+            <TextBlock x:Name="lblIntestazione" Text="Quiz Selezionato" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
+            <TextBlock x:Name="lblTitolo" Text="Domanda x" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Vertical">
             <TextBlock Margin="5" Name="lblDomanda" FontSize="22" TextWrapping="Wrap" MinHeight="200">Segnaposto per la domanda, cantami o diva del pelide achille l'ira funesta</TextBlock>
         </StackPanel>
         <StackPanel Grid.Row="2" Orientation="Vertical" VerticalAlignment="Bottom">
-            <Button Name="btnR0" HorizontalAlignment="Stretch" Content="Risposta 1 index 0" FontSize="22" Click="btnR0_Click"></Button>
-            <Button Name="btnR1" HorizontalAlignment="Stretch" Content="Risposta 2 index 1" FontSize="22" Click="btnR1_Click"></Button>
-            <Button Name="btnR2" HorizontalAlignment="Stretch" Content="Risposta 3 index 2" FontSize="22" Click="btnR2_Click"></Button>
+            <Button Name="btnR0" HorizontalAlignment="Stretch" Content="Risposta 1 index 0" FontSize="22" Click="btnR_Click"></Button>
+            <Button Name="btnR1" HorizontalAlignment="Stretch" Content="Risposta 2 index 1" FontSize="22" Click="btnR_Click"></Button>
+            <Button Name="btnR2" HorizontalAlignment="Stretch" Content="Risposta 3 index 2" FontSize="22" Click="btnR_Click"></Button>
 
         </StackPanel>
     </Grid>
