--- a/QuizITT_WP/QuizITT_WP/QuizPage.xaml
+++ b/QuizITT_WP/QuizITT_WP/QuizPage.xaml
@@ -28,12 +28,12 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Vertical">
-            <TextBlock Margin="5" Name="lblDomanda" FontSize="22" TextWrapping="Wrap" MinHeight="200">Segnaposto per la domanda, cantami o diva del pelide achille l'ira funesta</TextBlock>
+            <TextBlock Margin="10" Name="lblDomanda" FontSize="22" TextWrapping="Wrap" MinHeight="200">Segnaposto per la domanda, cantami o diva del pelide achille l'ira funesta</TextBlock>
         </StackPanel>
         <StackPanel Grid.Row="2" Orientation="Vertical" VerticalAlignment="Bottom">
-            <Button Name="btnR0" HorizontalAlignment="Stretch" Content="Risposta 1 index 0" FontSize="22" Click="btnR_Click"></Button>
-            <Button Name="btnR1" HorizontalAlignment="Stretch" Content="Risposta 2 index 1" FontSize="22" Click="btnR_Click"></Button>
-            <Button Name="btnR2" HorizontalAlignment="Stretch" Content="Risposta 3 index 2" FontSize="22" Click="btnR_Click"></Button>
+            <Button Name="btnR0" HorizontalAlignment="Stretch" Content="Risposta 1 index 0" FontSize="22" Click="btnR_Click" Margin="5,0" Background="{x:Null}"/>
+            <Button Name="btnR1" HorizontalAlignment="Stretch" Content="Risposta 2 index 1" FontSize="22" Click="btnR_Click" Margin="5,0" Background="{x:Null}"/>
+            <Button Name="btnR2" HorizontalAlignment="Stretch" Content="Risposta 3 index 2" FontSize="22" Click="btnR_Click" Margin="5,0" Background="{x:Null}"></Button>
 
         </StackPanel>
     </Grid>
